loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:3: error: not found: value estSurBlanc
while (estSurBlanc()) {
       ^Poucet1:11: error: not found: value >=
    case baggels>=3 => gauche()
                ^Poucet1:12: error: not found: value <=
    case baggles<=2 => droite()
                ^