loopdowhile.Poucet1.scala.code
var baggels: Int = 0

while (estSurBlanc()) {
  for (compteur <- 1 to 5) {
    avance()
    if (estSurBiscuit()) {
      baggels += 1
    }
  }
  baggels match{
  	case baggels>=3 => gauche()
  	case baggles<=2 => droite()
  }
}